--- a/templates/layout.html
+++ b/templates/layout.html
@@ -412,48 +412,48 @@
                     <ul class="espn-en" itemscope="" itemtype="http://www.schema.org/SiteNavigationElement" style="display: block;">
                         <li class="sports menu-nba" itemprop="name">
                             <a itemprop="url" href="/nba/" name="&amp;lpos=sitenavcustom+sitenav_nba">
-                                <span><span class="link-text"><font><font>NBA</font></font></span>
-                                <span class="link-text-short"><font><font>NBA</font></font></span>
+                                <span><span class="link-text"><font><font>车评</font></font></span>
+                                <span class="link-text-short"><font><font>车评</font></font></span>
                                 </span>
                             </a>
                             
                         </li>
                         <li class="sports menu-nfl" itemprop="name">
                             <a itemprop="url" href="/nfl/" name="&amp;lpos=sitenavcustom+sitenav_nfl">
-                                <span><span class="link-text"><font><font>NFL</font></font></span>
-                                <span class="link-text-short"><font><font>NFL</font></font></span>
+                                <span><span class="link-text"><font><font>大神经验</font></font></span>
+                                <span class="link-text-short"><font><font>大神经验</font></font></span>
                                 </span>
                             </a>
                             
                         </li>
                         <li class="sports menu-golf" itemprop="name">
                             <a itemprop="url" href="/golf/" name="&amp;lpos=sitenavcustom+sitenav_golf" data-icon="golf">
-                                <span><span class="link-text"><font><font>高尔夫球</font></font></span>
-                                <span class="link-text-short"><font><font>高尔夫球</font></font></span>
+                                <span><span class="link-text"><font><font>装备</font></font></span>
+                                <span class="link-text-short"><font><font>装备</font></font></span>
                                 </span>
                             </a>
                             
                         </li>
                         <li class="sports menu-mlb" itemprop="name">
                             <a itemprop="url" href="/mlb/" name="&amp;lpos=sitenavcustom+sitenav_mlb">
-                                <span><span class="link-text"><font><font>MLB</font></font></span>
-                                <span class="link-text-short"><font><font>MLB</font></font></span>
+                                <span><span class="link-text"><font><font>游记</font></font></span>
+                                <span class="link-text-short"><font><font>游记</font></font></span>
                                 </span>
                             </a>
                             
                         </li>
                         <li class="sports menu-ncaaf" itemprop="name">
                             <a itemprop="url" href="/college-football/" name="&amp;lpos=sitenavcustom+sitenav_ncf" data-icon="football-college">
-                                <span><span class="link-text"><font><font>NCAAF</font></font></span>
-                                <span class="link-text-short"><font><font>NCAAF</font></font></span>
+                                <span><span class="link-text"><font><font>什么值得买</font></font></span>
+                                <span class="link-text-short"><font><font>什么值得买</font></font></span>
                                 </span>
                             </a>
                             
                         </li>
                         <li class="external sports menu-soccer" itemprop="name">
                             <a itemprop="url" target="_blank" href="http://espnfc.com/" name="&amp;lpos=sitenavcustom+sitenav_soccer">
-                                <span><span class="link-text"><font><font>足球</font></font></span>
-                                <span class="link-text-short"><font><font>足球</font></font></span>
+                                <span><span class="link-text"><font><font>社区</font></font></span>
+                                <span class="link-text-short"><font><font>社区</font></font></span>
                                 </span>
                             </a>
                             
@@ -474,26 +474,19 @@
                             </a>
                             
                         </li>
-                        <li class="pillar logo fantasy fantasy" itemprop="name">
-                            <a itemprop="url" href="/fantasy/" name="&amp;lpos=sitenavcustom+sitenav_fantasy" data-icon="fantasy" data-logo="fantasy">
-                                <span><span class="link-text"><font><font>幻想</font></font></span>
-                                <span class="link-text-short"><font><font>幻想</font></font></span>
-                                </span>
-                            </a>
-                            
-                        </li>
+
                         <li class="pillar listen" itemprop="name">
                             <a itemprop="url" href="http://espn.go.com/espnradio/index" name="&amp;lpos=sitenavcustom+sitenav_listen">
-                                <span><span class="link-text"><font><font>听</font></font></span>
-                                <span class="link-text-short"><font><font>听</font></font></span>
+                                <span><span class="link-text"><font><font>文章</font></font></span>
+                                <span class="link-text-short"><font><font>文章</font></font></span>
                                 </span>
                             </a>
                             
                         </li>
                         <li class="pillar watch" itemprop="name">
                             <a itemprop="url" href="http://espn.go.com/watchespn/index" name="&amp;lpos=sitenavcustom+sitenav_watch">
-                                <span><span class="link-text"><font><font>看</font></font></span>
-                                <span class="link-text-short"><font><font>看</font></font></span>
+                                <span><span class="link-text"><font><font>视频</font></font></span>
+                                <span class="link-text-short"><font><font>视频</font></font></span>
                                 </span>
                             </a>
                             
