--- a/static/css/main.css
+++ b/static/css/main.css
@@ -374,3 +374,9 @@ a:hover, a:focus {
     background-position: -251px -120px;
 }
 
+.scores-next {
+    display: none !important;
+}
+.navcar li.navcar12 {
+    border-right: 1px solid #a5a6a7;
+}
