--- a/static/css/review.css
+++ b/static/css/review.css
@@ -1,6 +1,8 @@
 .plus_wrap {
     margin: 0 auto;
     width: 100%;
+    
+    margin-bottom: 20px;
 }
 .plus_wrap .show_gt_1120 {
     display: block;
