--- a/static/css/review.css
+++ b/static/css/review.css
@@ -195,7 +195,7 @@
 }
 .plusGlobalIcons {
     display: inline-block;
-    background-image: url(/page/img/img_abe38e53_all_icons.png);
+    background-image: url(http://static.zealer.com/page/img/img_abe38e53_all_icons.png);
     background-repeat: no-repeat;
     position: relative;
     top: 2px;
@@ -206,7 +206,7 @@
 }
 .plusGlobalIcons {
     display: inline-block;
-    background-image: url(/page/img/img_abe38e53_all_icons.png);
+    background-image: url(http://static.zealer.com/page/img/img_abe38e53_all_icons.png);
     background-repeat: no-repeat;
     position: relative;
     top: 2px;
