--- a/templates/bbs.html
+++ b/templates/bbs.html
@@ -1,5 +1,5 @@
 {% extends 'layout.html' %} {% block stylesheet %}
-<link rel="stylesheet" href="/static/css/review.css" />> {% endblock %} {% block main %}
+<link rel="stylesheet" href="/static/css/bbs.css" />> {% endblock %} {% block main %}
 <section id="pane-main">
     <div id="custom-nav" data-id="index"></div>
     <section id="main-container">
