--- a/templates/layout.html
+++ b/templates/layout.html
@@ -411,7 +411,7 @@
                 <nav id="global-nav" data-loadtype="client" data-wayfindsport="">
                     <ul class="espn-en" itemscope="" itemtype="http://www.schema.org/SiteNavigationElement" style="display: block;">
                         <li class="sports menu-nba" itemprop="name">
-                            <a itemprop="url" href="/nba/" name="&amp;lpos=sitenavcustom+sitenav_nba">
+                            <a itemprop="url" href="/reviews" name="&amp;lpos=sitenavcustom+sitenav_nba">
                                 <span><span class="link-text"><font><font>车评</font></font></span>
                                 <span class="link-text-short"><font><font>车评</font></font></span>
                                 </span>
@@ -451,7 +451,7 @@
                             
                         </li>
                         <li class="external sports menu-soccer" itemprop="name">
-                            <a itemprop="url" target="_blank" href="http://espnfc.com/" name="&amp;lpos=sitenavcustom+sitenav_soccer">
+                            <a itemprop="url" href="/bbs" name="&amp;lpos=sitenavcustom+sitenav_soccer">
                                 <span><span class="link-text"><font><font>社区</font></font></span>
                                 <span class="link-text-short"><font><font>社区</font></font></span>
                                 </span>
