--- a/templates/post.html
+++ b/templates/post.html
@@ -23,7 +23,7 @@
                                     </div>
                                     <div class="o-single-content__body o-single-content__body--main">
                                         <aside id='social-bar' class="c-social-bar c-social-bar--vertical c-social-bar--colored c-social-bar--sqaured c-social-bar--left js-social-bar" data-component="SocialBar" data-post-title="爱范儿客户端新版上线 不妥协只为做到更好" data-post-link="http%3A%2F%2Fwww.ifanr.com%2F695851" data-post-summary="终于加入了这些功能，泪奔。" data-post-id="695851" data-fixed-start="#article-content" data-fixed-end="#footer-rec-posts">
-                                            <div class="c-social-bar__counter"><b class="js-share-counter">24</b>SHARES</div>
+                                            <div class="c-social-bar__counter"><b class="js-share-counter">24</b></div>
                                             <a class="c-social-bar__icon c-social-bar__icon--weibo" data-weibo="" target="_blank" href="/api/special/changweibo/index.php?ifr_post_id=695851"></a>
                                             <div class="c-social-bar__icon c-social-bar__icon--wechat">
                                                 <div class="c-social-bar__icon--wechat__qrcode c-popup-qrcode">
