--- a/templates/admin/tag_new.html
+++ b/templates/admin/tag_new.html
@@ -46,6 +46,7 @@
                       <select id="tag_type" class="form-control" >
                         <option>普通标签</option>
                         <option>汽车品牌</option>
+                        <option>汽车厂家</option>
                         <option>汽车车型</option>
                       </select>
                     </div>
