--- a/templates/new.html
+++ b/templates/new.html
@@ -161,6 +161,7 @@ $(document).ready(function() {
         });
         var cover = $('#article-header').css('background-image')
         cover = cover.replace('url(','').replace(')','').replace(/\"/gi, "");
+        var tags = $('#tagInput').val();
         $.ajax({
             type: "POST",
             contentType: "application/json; charset=utf-8",
@@ -170,6 +171,7 @@ $(document).ready(function() {
                 title: $('.yx-title').text(),
                 cover: cover,
                 content: content,
+                tags: tags,
             }),
             success: function(msg) {
                 if (msg.success == 0) {
