--- a/templates/admin/car_vender.html
+++ b/templates/admin/car_vender.html
@@ -23,7 +23,7 @@
     <div class="col-xs-12">
       <div class="box">
         <div class="box-header">
-          <a href="/admin/carvender/new" class="btn-save btn btn-success btn-sm">新建厂家</a>
+          <a href="/admin/cardata/new?type=car-vender" class="btn-save btn btn-success btn-sm">新建厂家</a>
           <div class="box-tools">
             <div class="input-group">
               <input type="text" name="table_search" class="form-control input-sm pull-right" style="width: 150px;" placeholder="Search"/>
